--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <meta charset="UTF-8">
 <title>For You ❤️</title>
 
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
 <style>
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   background: linear-gradient(to bottom right, #ffe6f0, #ffd6eb);
   text-align: center;
 }
@@ -23,17 +26,19 @@ body {
 }
 
 h1 {
-  margin-top: 20vh;
-  font-size: 32px;
+  margin-top: 10vh;
+  font-size: 36px;
   color: #ff2e7a;
+  font-weight: 600;
 }
 
 .text {
-  max-width: 600px;
-  margin: 20px auto;
-  font-size: 18px;
-  line-height: 1.6;
-  color: #333;
+  max-width: 650px;
+  margin: 30px auto;
+  font-size: 24px;
+  line-height: 1.8;
+  color: #444;
+  font-family: 'Great Vibes', cursive;
 }
 
 button {
@@ -59,6 +64,11 @@ button {
   background: #ff4d88;
   color: white;
 }
+
+.teddy {
+  width: 200px;
+  margin-top: 20px;
+}
 </style>
 </head>
 
@@ -66,6 +76,11 @@ button {
 
 <div id="page1" class="page active">
   <h1>Will You Be My Valentine? 💖</h1>
+
+  <img src="200w.gif" class="teddy">
+
+  <br>
+
   <button id="yesBtn">Yes</button>
   <button id="noBtn" onclick="alert('Wrong answer 😌')">No</button>
 </div>
