--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>For You ❤️</title>
 
-<!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
 <style>
@@ -13,41 +12,72 @@ body {
   font-family: 'Poppins', sans-serif;
   background: linear-gradient(to bottom right, #ffe6f0, #ffd6eb);
   text-align: center;
+  overflow-x: hidden;
+}
+
+/* Floating hearts */
+.heart {
+  position: fixed;
+  bottom: -20px;
+  color: #ff6fa5;
+  font-size: 20px;
+  animation: floatUp 6s linear infinite;
+  opacity: 0.7;
+}
+
+@keyframes floatUp {
+  0% { transform: translateY(0); opacity: 0.7; }
+  100% { transform: translateY(-110vh); opacity: 0; }
 }
 
 .page {
   display: none;
   min-height: 100vh;
-  padding: 40px;
+  padding: 20px;
+  opacity: 0;
+  transition: opacity 0.6s ease;
 }
 
 .active {
   display: block;
+  opacity: 1;
+}
+
+.teddy {
+  width: 260px;
+  display: block;
+  margin: 80px auto 20px auto;
 }
 
 h1 {
-  margin-top: 10vh;
   font-size: 36px;
   color: #ff2e7a;
-  font-weight: 600;
+  margin: 10px 0 20px 0;
 }
 
 .text {
-  max-width: 650px;
+  max-width: 90%;
   margin: 30px auto;
-  font-size: 24px;
-  line-height: 1.8;
+  font-size: 30px;
+  line-height: 2;
   color: #444;
   font-family: 'Great Vibes', cursive;
+  opacity: 0;
+  animation: fadeIn 1.5s forwards;
+}
+
+@keyframes fadeIn {
+  to { opacity: 1; }
 }
 
 button {
-  padding: 12px 25px;
-  font-size: 16px;
+  padding: 14px 28px;
+  font-size: 18px;
   border: none;
   border-radius: 30px;
   cursor: pointer;
   margin: 15px;
+  transition: transform 0.3s ease;
 }
 
 #yesBtn {
@@ -65,61 +95,75 @@ button {
   color: white;
 }
 
-.teddy {
-  width: 200px;
-  margin-top: 20px;
+.finalText {
+  font-size: 40px;
+  color: #ff2e7a;
+  margin-top: 20vh;
 }
 </style>
 </head>
 
 <body>
 
+<!-- Floating hearts generator -->
+<script>
+function createHeart() {
+  const heart = document.createElement("div");
+  heart.classList.add("heart");
+  heart.innerHTML = "❤";
+  heart.style.left = Math.random() * 100 + "vw";
+  heart.style.fontSize = Math.random() * 15 + 15 + "px";
+  heart.style.animationDuration = Math.random() * 3 + 4 + "s";
+  document.body.appendChild(heart);
+  setTimeout(() => heart.remove(), 6000);
+}
+setInterval(createHeart, 800);
+</script>
+
 <div id="page1" class="page active">
-  <h1>Will You Be My Valentine? 💖</h1>
 
   <img src="200w.gif" class="teddy">
 
-  <br>
+  <h1>Will You Be My Valentine? 💖</h1>
 
   <button id="yesBtn">Yes</button>
   <button id="noBtn" onclick="alert('Wrong answer 😌')">No</button>
+
 </div>
 
 <div id="page2" class="page">
+
   <h1>Since you said yes…</h1>
+
   <p class="text">
     Happy Valentine’s Day, my love.<br><br>
 
     I love you so much. I really love the way we get along with each other,
-    and teasing you is honestly my favorite part. Being with you just feels easy and natural.<br><br>
+    and teasing you is honestly my favorite part.<br><br>
 
-    I want to spend more time with you, talk more, laugh more, and just be around you.
-    I wish I could hug you right now and make sure you’re okay.<br><br>
+    I want to spend more time with you, laugh more,
+    and just be around you.<br><br>
 
-    I miss you a lot. More than I say sometimes.<br><br>
-
-    Muaah 🤍
+    I miss you more than I say sometimes. 🤍
   </p>
+
   <button onclick="goToPage3()" class="nextBtn">Next</button>
+
 </div>
 
 <div id="page3" class="page">
   <h1>Look at this cutie 🍼</h1>
-  <p class="text">We’ll add baby pictures here later 😌</p>
+  <p class="text">Wanna make a mini version like this? 🤭</p>
   <button onclick="goToPage4()" class="nextBtn">Next</button>
 </div>
 
 <div id="page4" class="page">
-  <h1>My Feelings ❤️</h1>
-  <p class="text">
-    I feel lucky to have you. Even when we can’t be together physically,
-    you’re still my favorite person. Thank you for being you.
-  </p>
+  <div class="finalText">I choose you. ❤️</div>
+  <button class="nextBtn" onclick="shakeButton(this)">Forever?</button>
 </div>
 
 <script>
 let clickCount = 0;
-
 const yesBtn = document.getElementById("yesBtn");
 
 yesBtn.onclick = function () {
@@ -129,20 +173,32 @@ yesBtn.onclick = function () {
     yesBtn.style.left = x + "px";
     yesBtn.style.top = y + "px";
     clickCount++;
-  } else {
-    document.getElementById("page1").classList.remove("active");
-    document.getElementById("page2").classList.add("active");
+  } else if (clickCount === 3) {
+    yesBtn.style.transform = "scale(1.3)";
+    clickCount++;
+    setTimeout(() => {
+      switchPage("page1", "page2");
+    }, 600);
   }
 };
 
+function switchPage(from, to) {
+  document.getElementById(from).classList.remove("active");
+  document.getElementById(to).classList.add("active");
+}
+
 function goToPage3() {
-  document.getElementById("page2").classList.remove("active");
-  document.getElementById("page3").classList.add("active");
+  switchPage("page2", "page3");
 }
 
 function goToPage4() {
-  document.getElementById("page3").classList.remove("active");
-  document.getElementById("page4").classList.add("active");
+  switchPage("page3", "page4");
+}
+
+function shakeButton(btn) {
+  btn.style.transform = "rotate(5deg)";
+  setTimeout(() => btn.style.transform = "rotate(-5deg)", 100);
+  setTimeout(() => btn.style.transform = "rotate(0deg)", 200);
 }
 </script>
 
