--- a/index.html
+++ b/index.html
@@ -15,21 +15,20 @@ body {
   overflow-x: hidden;
 }
 
-/* Floating hearts */
+/* Floating click hearts */
 .heart {
-  position: fixed;
-  bottom: -20px;
+  position: absolute;
+  pointer-events: none;
   color: #ff6fa5;
-  font-size: 20px;
-  animation: floatUp 6s linear infinite;
-  opacity: 0.7;
+  animation: floatUp 4s linear forwards;
 }
 
 @keyframes floatUp {
-  0% { transform: translateY(0); opacity: 0.7; }
-  100% { transform: translateY(-110vh); opacity: 0; }
+  from { transform: translateY(0); opacity: 1; }
+  to { transform: translateY(-80px); opacity: 0; }
 }
 
+/* Pages */
 .page {
   display: none;
   min-height: 100vh;
@@ -47,13 +46,13 @@ body {
   width: 260px;
   display: block;
   margin: 60px auto 20px auto;
+  cursor: pointer;
 }
 
 h1 {
   text-align: center;
   font-size: 34px;
   color: #ff2e7a;
-  margin-bottom: 20px;
 }
 
 .text {
@@ -65,14 +64,9 @@ h1 {
   font-family: 'Great Vibes', cursive;
   text-align: left;
   padding: 0 10px;
-  opacity: 0;
-  animation: fadeIn 1.5s forwards;
 }
 
-@keyframes fadeIn {
-  to { opacity: 1; }
-}
-
+/* Buttons */
 .button-wrapper {
   text-align: center;
 }
@@ -84,7 +78,7 @@ button {
   border-radius: 30px;
   cursor: pointer;
   margin: 15px;
-  transition: transform 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 #yesBtn {
@@ -102,6 +96,29 @@ button {
   color: white;
 }
 
+.nextBtn:hover {
+  box-shadow: 0 0 15px rgba(255,77,136,0.6);
+}
+
+/* Polaroid effect */
+.polaroid {
+  background: white;
+  padding: 12px;
+  width: 170px;
+  margin: 15px;
+  display: inline-block;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.25);
+}
+
+.polaroid img {
+  width: 100%;
+}
+
+/* Final page styling */
+#page4 {
+  background: linear-gradient(to bottom right, #ffb3d1, #ff99c8);
+}
+
 .finalText {
   text-align: center;
   font-size: 38px;
@@ -113,23 +130,9 @@ button {
 
 <body>
 
-<script>
-function createHeart() {
-  const heart = document.createElement("div");
-  heart.classList.add("heart");
-  heart.innerHTML = "❤";
-  heart.style.left = Math.random() * 100 + "vw";
-  heart.style.fontSize = Math.random() * 15 + 15 + "px";
-  heart.style.animationDuration = Math.random() * 3 + 4 + "s";
-  document.body.appendChild(heart);
-  setTimeout(() => heart.remove(), 6000);
-}
-setInterval(createHeart, 800);
-</script>
-
 <div id="page1" class="page active">
 
-  <img src="200w.gif" class="teddy">
+  <img src="200w.gif" class="teddy" onclick="teddySecret()">
 
   <h1>Will You Be My Valentine? 💖</h1>
 
@@ -141,83 +144,17 @@ setInterval(createHeart, 800);
 </div>
 
 <div id="page2" class="page">
-
   <h1>Since you said yes…</h1>
 
   <p class="text">
     Happy Valentine’s Day, my love.<br><br>
-
-    I love you so much. I really love the way we get along with each other,
-    and teasing you is honestly my favorite part.<br><br>
-
-    I want to spend more time with you, laugh more,
-    and just be around you.<br><br>
-
+    I love you so much. I really love how we get along,
+    and teasing you is my favorite part.<br><br>
+    I want to spend more time with you and just be around you.<br><br>
     I miss you more than I say sometimes. 🤍
   </p>
 
   <div class="button-wrapper">
     <button onclick="goToPage3()" class="nextBtn">Next</button>
   </div>
-
 </div>
-
-<div id="page3" class="page">
-  <h1>Look at this cutie 🍼</h1>
-  <p class="text">Wanna make a mini version like this? 🤭</p>
-
-  <div class="button-wrapper">
-    <button onclick="goToPage4()" class="nextBtn">Next</button>
-  </div>
-</div>
-
-<div id="page4" class="page">
-  <div class="finalText">I choose you. ❤️</div>
-
-  <div class="button-wrapper">
-    <button class="nextBtn" onclick="shakeButton(this)">Forever?</button>
-  </div>
-</div>
-
-<script>
-let clickCount = 0;
-const yesBtn = document.getElementById("yesBtn");
-
-yesBtn.onclick = function () {
-  if (clickCount < 3) {
-    const x = Math.random() * 80 - 40;
-    const y = Math.random() * 80 - 40;
-    yesBtn.style.left = x + "px";
-    yesBtn.style.top = y + "px";
-    clickCount++;
-  } else if (clickCount === 3) {
-    yesBtn.style.transform = "scale(1.3)";
-    clickCount++;
-    setTimeout(() => {
-      switchPage("page1", "page2");
-    }, 600);
-  }
-};
-
-function switchPage(from, to) {
-  document.getElementById(from).classList.remove("active");
-  document.getElementById(to).classList.add("active");
-}
-
-function goToPage3() {
-  switchPage("page2", "page3");
-}
-
-function goToPage4() {
-  switchPage("page3", "page4");
-}
-
-function shakeButton(btn) {
-  btn.style.transform = "rotate(5deg)";
-  setTimeout(() => btn.style.transform = "rotate(-5deg)", 100);
-  setTimeout(() => btn.style.transform = "rotate(0deg)", 200);
-}
-</script>
-
-</body>
-</html>
